# weirdverb

./: .gitignore  CMakeLists.txt  README.md
include/VerbSuite/: WeirdConvolutionReverb.h
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WeirdConvolutionReverb.cpp  main.cpp
